# pyAvaCore

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  REGIONIDS.md  REGIONS.md  __main__.py  example.py  pyproject.toml  requirements.dev.txt  setup.py  test.ratings.json  tests.test_vorarlberg_2021_12.caaml.json  tests.test_vorarlberg_2021_12.ratings.json  tests.test_vorarlberg_2022_01.ratings.json  update-pyAvaCore.py.json.sh
avacore/: MetaData.py  __main__.py  avabulletin.py  avabulletins.py  avajson.py  geojson.py  processor.py  processor_ES.py  processor_ES_CT.py  processor_FI.py  processor_FR.py  processor_GB.py  processor_IS.py  processor_IT_Livigno.py  processor_IT_MeteoMont.py  processor_PL_12.py  processor_SE.py  processor_ad.py  processor_caaml.py  processor_caamlv5.py  processor_caamlv6.py  processor_catalunya.py  processor_ch.py  processor_ch_zip.py  processor_cz.py  processor_es.py  processor_fi.py  processor_fr.py  processor_is.py  processor_it.py  processor_it_livigno.py  processor_it_meteomont.py  processor_norway.py  processor_pl.py  processor_pl_12.py  processor_ro.py  processor_se.py  processor_sk.py  processor_ua.py  processor_uk.py  (+4 more)
documentation/: caamlv5.3.2.md
pyAvaCore/: pyAvaCore.py  pyAvaCoreSwiss.py
tests/: __init__.py  test_ad.py  test_ad.py.caaml.json  test_ad.py.xml  test_ad_2022_12.py  test_ad_2022_12.py.caaml.json  test_aineva.py  test_aineva.py.caaml.json  test_albina.py  test_albina.py.caaml.json  test_albina.py.ratings.json  test_albina_2023_03_14.py  test_albina_2023_03_14.py.json  test_albina_2023_03_14.py.ratings.json  (+123 more)
(+172 files in other folders)
